# iot-pipeline-de-dados

./: .replit  README.md  main.py  pyproject.toml
